menu button and header stretching fixes

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -2,6 +2,8 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 header {
@@ -10,6 +12,7 @@ header {
     flex-direction: row;
     align-items: center;
     width: 100%;
+    padding-right: 50px;
     justify-content: space-around;
 }
 
@@ -17,12 +20,16 @@ header img {
     padding: 5px;
 }
 
+nav {
+    padding-right: 35px;
+}
+
 nav ul {
     display: flex;
     flex-direction: row;
     list-style: none;
-    width: 100%;
-    justify-content: space-around;
+    width: 95%;
+    justify-content: flex-start;
 }
 
 nav ul li a {
@@ -53,7 +60,7 @@ h3 {
     position: relative;
     text-align: center;
     justify-self: center;
-    width: 45%;
+    width: 50%;
 }
 
 .hero h2 {
@@ -90,6 +97,7 @@ h3 {
 main {
     justify-items: center;
     text-align: center;
+    width: 100%;
 }
 
 main img {
@@ -101,6 +109,7 @@ p {
 }
 
 footer {
+    width: 100%;
     background-color: rgba(135, 207, 235, 0.726);
     padding: 2rem;
     text-align: center;
